Added navigation to other pages

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   <body>
     <header>
       <div class="header container">
-        <a href="/">
+        <div>
           <img id="logo" src="./images/logo-black1.png" alt="logo" />
-        </a>
-        <ul>
-          <li><a class="characters" href="/">Characters</a></li>
-          <li><a class="locations"href="/">Locations</a></li>
-          <li><a class="episodes" href="/">Episodes</a></li>
+        </div>
+        <ul class="nav">
+          <li><button class="characters">Characters</button></li>
+          <li><button class="locations">Locations</button></li>
+          <li><button class="episodes">Episodes</button></li>
         </ul>
       </div>
     </header>
